Closed
Bug 1884053
Opened 1 year ago
Closed 1 year ago
ld64.lld: error: undefined symbol: mozilla::baseprofiler::detail::GetThreadRegistrationTime()
Categories
(Core :: Gecko Profiler, defect)
Tracking
()
RESOLVED
FIXED
125 Branch
Tracking | Status | |
---|---|---|
firefox125 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
When building gtests with either --enable-project=mobile/ios or --disable-gecko-profiler:
0:47.01 ld64.lld: error: undefined symbol: mozilla::baseprofiler::detail::GetThreadRegistrationTime()
0:47.01 >>> referenced by ../../../tools/profiler/tests/gtest/Unified_cpp_tests_gtest0.o:(symbol GeckoProfiler_ThreadRegistrationInfo_Test::TestBody()+0x6b0)
0:47.01 >>> referenced by ../../../tools/profiler/tests/gtest/Unified_cpp_tests_gtest0.o:(symbol mozilla::profiler::ThreadRegistrationInfo::ThreadRegistrationInfo(char const*)+0xb4)
0:47.02 >>> referenced by ../../../tools/profiler/tests/gtest/Unified_cpp_tests_gtest0.o:(symbol mozilla::profiler::ThreadRegistrationInfo::ThreadRegistrationInfo(char const*)+0x4c)
On Linux, the build doesn't fail, but it crashes when running gtests because of the same missing symbol.
I'm not sure why the non-gtest libxul doesn't fail to link in the same way on mac.
Assignee | ||
Comment 1•1 year ago
|
||
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/b09474764fb5
Don't use baseprofiler::detail::GetThreadRegistrationTime when the profiler is disabled. r=profiler-reviewers,mstange
Comment 3•1 year ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 1 year ago
status-firefox125:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•