Bug 1884053 - Don't use baseprofiler::detail::GetThreadRegistrationTime when the profiler is disabled. r=profiler-reviewers,mstange

Differential Revision: https://phabricator.services.mozilla.com/D203870